Facebook Shared New.

--- a/src/app/autenticacao/components/login/login.component.html
+++ b/src/app/autenticacao/components/login/login.component.html
@@ -25,7 +25,7 @@
         </mat-list-item>
 
         <mat-list-item>
-          <div mat-line>Não tem uma conta? <a routerLink="/autenticacao/conta">Cadastra-se!</a></div>
+          <div mat-line>Não tem uma conta? <a routerLink="/autenticacao/conta">Cadastre-se!</a></div>
         </mat-list-item>
       </mat-list>
     </form>
