--- a/src/app/doacoes/components/minhas-doacoes/minhas-doacoes.component.html
+++ b/src/app/doacoes/components/minhas-doacoes/minhas-doacoes.component.html
@@ -30,7 +30,7 @@
 <!--                      allow="encrypted-media">-->
 <!--                    </iframe>-->
                     <iframe
-                      src="https://www.facebook.com/plugins/share_button.php?href=https://move-roda.herokuapp.com/doacoes/&layout=button&size=small&width=105&height=20&appId"
+                      [src]="gerarUrlCompartilhamento(doacao)"
                       width="105"
                       height="20"
                       style="border:none;overflow:hidden"
