--- a/src/app/doacoes/components/minhas-doacoes/minhas-doacoes.component.html
+++ b/src/app/doacoes/components/minhas-doacoes/minhas-doacoes.component.html
@@ -19,6 +19,16 @@
                     Editar <mat-icon>edit</mat-icon>
                   </button>
                   <button mat-button color="primary">
+<!--                    <iframe-->
+<!--                      src="https://www.facebook.com/plugins/share_button.php?href=https://move-roda.herokuapp.com/doacoes/detalhes/2/&layout=button&size=small&width=105&height=20&appId"-->
+<!--                      width="105"-->
+<!--                      height="20"-->
+<!--                      style="border:none;overflow:hidden"-->
+<!--                      scrolling="no"-->
+<!--                      frameborder="0"-->
+<!--                      allowTransparency="true"-->
+<!--                      allow="encrypted-media">-->
+<!--                    </iframe>-->
                     <iframe
                       [src]="gerarUrlCompartilhamento(doacao)"
                       width="105"
@@ -30,6 +40,10 @@
                       allow="encrypted-media"
                       name="iframeShared">
                     </iframe>
+<!--                    <a-->
+<!--                      href="https://www.facebook.com/plugins/share_button.php?href=https://move-roda.herokuapp.com/doacoes/detalhes/{{doacao.id}}/&layout=button&size=small&width=105&height=20&appId"-->
+<!--                      target="iframeShared">-->
+<!--                    </a>-->
                   </button>
                 </div>
                 <mat-divider></mat-divider>
@@ -48,7 +62,7 @@
                   </button>
                   <button mat-button color="primary">
                     <iframe
-                      [src]="gerarUrlCompartilhamento(doacao)"
+                      src="https://www.facebook.com/plugins/share_button.php?href=http://www.portalbr4.com.br/&layout=button&size=small&width=105&height=20&appId"
                       width="105"
                       height="20"
                       style="border:none;overflow:hidden"
