Ajustes de merge

--- a/src/app/doacoes/components/consulta-detalhes-doacao/consulta-detalhes-doacao.component.html
+++ b/src/app/doacoes/components/consulta-detalhes-doacao/consulta-detalhes-doacao.component.html
@@ -6,7 +6,6 @@
     </mat-card-header>
 
     <img mat-card-image *ngIf="doacao.imagens.length > 0" [src]="doacao.imagens[0].safeUpload">
-<!--    <img *ngIf="doacao.imagens.length > 0" class="img-list" [src]="doacao.imagens[0].safeUpload" />-->
     <mat-card-content>
       <form fxLayoutAlign="center">
         <mat-list>
@@ -16,7 +15,7 @@
               <p>{{doacao.detalhes}}</p>
             </div>
           </mat-list-item>
-          <mat-list-item>
+          <mat-list-item *ngIf="this.usuarioAutenticado()">
             <div mat-line><mat-label>Quem está doando?</mat-label></div>
             <div mat-line>
               <mat-icon>account_circle</mat-icon> {{doacao.usuario.nome}}
@@ -30,6 +29,9 @@
           </mat-list-item>
         </mat-list>
       </form>
+      <p *ngIf="!usuarioAutenticado()" style="text-align: center">
+        Faça o login para ver informações de contato. <a routerLink="/autenticacao/login">Clique aqui.</a>
+      </p>
     </mat-card-content>
   </mat-card>
 </div>
